[gd_scene load_steps=7 format=3 uid="uid://bkfyiyro88x3q"]

[ext_resource type="Script" uid="uid://3uofbueh3m11" path="res://Models/Scenes/main_menu.gd" id="1_j5w4h"]
[ext_resource type="PackedScene" uid="uid://co458jxngt4el" path="res://Models/UI/Overlays/Settings/settings.tscn" id="2_ognit"]
[ext_resource type="PackedScene" uid="uid://dlflxypiwhkyi" path="res://Models/UI/Overlays/save_menu.tscn" id="3_x30nn"]
[ext_resource type="Texture2D" uid="uid://b4xcktvul2jnv" path="res://Assets/Art/new_animated_texture.tres" id="4_ydioe"]

[sub_resource type="LabelSettings" id="LabelSettings_yoqpr"]
font_size = 128

[sub_resource type="LabelSettings" id="LabelSettings_evq3c"]
font_size = 32

[node name="MainMenu" type="Node" node_paths=PackedStringArray("load_button", "new_button", "menu_ui", "exit_button", "settings_menu", "save_menu", "save_icon", "canvas_layer")]
script = ExtResource("1_j5w4h")
load_button = NodePath("CanvasLayer/MenuUI/VBoxContainer/Load")
new_button = NodePath("CanvasLayer/MenuUI/VBoxContainer/New")
menu_ui = NodePath("CanvasLayer/MenuUI")
exit_button = NodePath("CanvasLayer/ExitButton")
settings_menu = NodePath("CanvasLayer/Settings")
save_menu = NodePath("CanvasLayer/Save/VBoxContainer/SaveMenu")
save_icon = NodePath("CanvasLayer/AutosaveIcon")
canvas_layer = NodePath("CanvasLayer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.084
anchor_right = 1.002
anchor_bottom = 0.463
offset_top = -3.24
offset_right = -0.279968
offset_bottom = 0.320007
grow_horizontal = 2
grow_vertical = 2
text = "IZANAMI"
label_settings = SubResource("LabelSettings_yoqpr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="CanvasLayer/MenuUI/Title"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.021
anchor_right = 0.998
anchor_bottom = 0.9
offset_left = 229.0
offset_top = 123.06
offset_right = -235.718
offset_bottom = 41.875
grow_horizontal = 2
grow_vertical = 0
text = "- Remaster -"
label_settings = SubResource("LabelSettings_evq3c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 30.0
offset_right = -200.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Load" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "Load Game"

[node name="New" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "New Game"

[node name="Settings" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/MenuUI/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Settings" parent="CanvasLayer" instance=ExtResource("2_ognit")]
visible = false

[node name="Save" parent="CanvasLayer" instance=ExtResource("3_x30nn")]

[node name="ExitButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 10.0
offset_top = 10.0
offset_right = 29.0
offset_bottom = 24.0
text = "Exit"

[node name="AutosaveIcon" type="HBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_bottom = -10.0
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/AutosaveIcon"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("4_ydioe")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="CanvasLayer/AutosaveIcon"]
layout_mode = 2
text = "Saving"

[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUI/VBoxContainer/Quit" to="." method="_on_quit_pressed"]

[editable path="CanvasLayer/Save"]
[editable path="CanvasLayer/Save/VBoxContainer/SaveMenu"]
[editable path="CanvasLayer/Save/VBoxContainer/SaveMenu/Options"]
